First testing done

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dité",
+  "name": "dite",
   "description": "Process based shared web hosting platform service",
   "version": "0.0.1",
   "private": true,
