--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "3.x",
     "ejs": "1.0.x",
     "mongoose": "3.x",
-    "fs-extra": "0.9.x"
+    "fs-extra": "0.9.x",
+    "async": "0.9.x"
   }
 }
