--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "express": "3.x",
+    "socket.io": "1.x",
     "ejs": "1.0.x",
     "mongoose": "3.x",
     "fs-extra": "0.9.x",
